# hector_vision

./: .gitignore  stack.xml
hector_bar_detection/: CMakeLists.txt  package.xml
hector_bar_detection/launch/: bar_detection.launch  bar_detection_theta.launch
hector_bar_detection/src/: bar_detection.py  bar_detection_node.py
hector_color_detection_nodelet/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hector_color_detection_nodelet/cfg/: ColorDetection.cfg
hector_color_detection_nodelet/include/hector_color_detection_nodelet/: hector_color_detection_nodelet.h
hector_color_detection_nodelet/launch/: hector_barrel_detection_nodelet.launch  load_into_openni_nodelet_on_robot.launch  test_with_tracker.launch
hector_color_detection_nodelet/src/: hector_barrel_detection_nodelet.cpp  hector_color_detection_nodelet.cpp
hector_detection_aggregator/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hector_detection_aggregator/config/: HectorDetectionAggregator.cfg  HectorDetectionAggregatorConfig.cfg  params.yaml
hector_detection_aggregator/include/hector_detection_aggregator/: detection_aggregator.h
hector_detection_aggregator/launch/: hector_detection_aggregator.launch  test_with_webcam.launch
hector_detection_aggregator/src/: detection_aggregator.cpp  detection_aggregator_node.cpp  detection_aggregator_nodelet.cpp
hector_fast_hazmat_detection/: CMakeLists.txt  package.xml
hector_fast_hazmat_detection/launch/: hazmat_detection.launch  hazmat_detection_360.launch
hector_fast_hazmat_detection/src/: area_of_interest_detection.py  contour_filtering.py  debug_detection.py  debug_information.py  distance_measures.py  edge_detection.py  hazmat_detection.py  hazmat_detection_node  hazmat_detection_node.py  hazmat_detection_test.py  stand_alone.py
hector_fast_hazmat_detection/src/hector_fast_hazmat_detection/: debug_detection.py  stand_alone.py  (+3 more)
hector_heat_detection/: .gitignore  CMakeLists.txt  manifest.xml  nodelet_plugins.xml  package.xml
hector_heat_detection/cfg/: HeatDetection.cfg  heat_detection_gazebo.yaml
hector_heat_detection/launch/: argo_heat_detection.launch  argo_heat_detection_nodelet.launch  heat_detection.launch  heat_detection_gazebo.launch
hector_heat_detection/src/: heat_detection.cpp  heat_detection.h  heat_detection_node.cpp  heat_detection_nodelet.cpp
hector_image_rotate/: CMakeLists.txt  package.xml
hector_image_rotate/cfg/: hector_image_rotate.yaml  hector_image_rotate_arm.yaml  hector_image_rotate_gripper.yaml
hector_image_rotate/launch/: image_rotate_default.launch
hector_motion_detection/: .gitignore  CMakeLists.txt  manifest.xml  manifest.xml.backup  nodelet_plugins.xml  package.xml
hector_motion_detection/cfg/: MotionDetection.cfg  motion_detection_default.yaml  motion_detection_gazebo.yaml  motion_detection_robocup.yaml
hector_motion_detection/config/: moving_dots.yaml  moving_feathers.yaml  moving_feathers_gripper.yaml
hector_motion_detection/launch/: load_default_params.launch  load_robocup_params.launch  motion_detection.launch  motion_detection_gazebo.launch  motion_detection_gripper.launch  motion_detection_test.launch  test_with_bagfiles.launch  test_with_videos.launch  test_with_videos.launch~  test_with_webcam.launch  test_with_webcam.launch~  test_without_webcam.launch  test_without_webcam.launch~
hector_motion_detection/src/: motion_detection.cpp  motion_detection.h  motion_detection_node.cpp  motion_detection_nodelet.cpp
hector_pipe_detection/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hector_pipe_detection/launch/: pipe_detection.launch  pipe_detection_nodelet.launch  pipe_detection_realsense.launch  pipe_detection_realsense_nodelet.launch
hector_pipe_detection/src/: circle_detection.cpp  edge_detection.cpp  pipe_detection_nodelet.cpp
hector_qrcode_detection/: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  Makefile  manifest.xml  manifest.xml.backup  nodelet.xml  package.xml
hector_qrcode_detection/launch/: qrcode_detection.launch  qrcode_detection_arm_rgbd.launch  qrcode_detection_rcgo21.launch
hector_qrcode_detection/src/: CMakeLists.txt  node.cpp  nodelet.cpp  qrcode_detection.cpp
hector_soft_obstacle_detection/: CMakeLists.txt  manifest.xml
hector_soft_obstacle_detection/cfg/: SoftObstacleDetection.cfg
hector_soft_obstacle_detection/launch/: soft_obstacle_detection.launch
hector_soft_obstacle_detection/src/: soft_obstacle_detection.cpp  soft_obstacle_detection.h
hector_thermal_image_conversion/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hector_thermal_image_conversion/cfg/: ThermalImageConversion.cfg
hector_thermal_image_conversion/launch/: heat_image_colorization.launch  heat_image_colorization_nodelet.launch  heat_image_processing.launch  heat_image_processing_nodelet.launch  heat_image_translation.launch  heat_image_translation_nodelet.launch
hector_thermal_image_conversion/src/: heat_image_colorizer.cpp  heat_image_colorizer_node.cpp  heat_image_colorizer_nodelet.cpp  heat_image_translator.cpp  heat_image_translator_node.cpp  heat_image_translator_nodelet.cpp
hector_thermal_self_filter/: CMakeLists.txt  manifest.xml  package.xml
hector_thermal_self_filter/launch/: thermal_self_filter_argo_tracker.launch  thermal_self_filter_hector_tracker.launch  thermal_self_filter_hector_ugv.launch  thermal_self_filter_obelix_ugv.launch  thermal_self_filter_tracker_ugv.launch
hector_thermal_self_filter/params/: argo_tracker_thermal_self_filter.yaml  hector_tracker_thermal_self_filter.yaml  hector_ugv_thermal_self_filter.yaml  obelix_ugv_thermal_self_filter.yaml  tracker_ugv_thermal_self_filter.yaml
hector_thermal_self_filter/src/: thermal_self_filter_node.cpp
hector_vision_algorithms/: CMakeLists.txt  package.xml
hector_vision_algorithms/src/: color_difference_map.cpp  color_edges.cpp  edge_detection.cpp  helpers.cpp  thresholding.cpp
hector_vision_algorithms_py/: CMakeLists.txt  package.xml  setup.py
hector_vision_algorithms_py/np_opencv_converter/: np_opencv_converter.cpp  np_opencv_converter.hpp
hector_vision_algorithms_py/src/: module.cpp
(+92 files in other folders)
