<?xml version="1.0"?>
<package>
  <name>hector_detection_aggregator</name>
  <version>0.0.0</version>
  <description>The hector_detection_aggregator package</description>

  <maintainer email="kevin.daun@stud.tu-darmstadt.de">Kevin Daun</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>hector_worldmodel_msgs</build_depend>
  <build_depend>hector_perception_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>hector_worldmodel_msgs</run_depend>
  <run_depend>hector_perception_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


  <export>
  <!-- Other tools can request additional information be placed here -->
  <export>
   <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lhector_detection_aggregator"/>
  </export>

  </export>
</package>
