<?xml version="1.0"?>
<package format="2">
  <name>hector_detection_aggregator</name>
  <version>0.0.0</version>
  <description>The hector_detection_aggregator package</description>

  <maintainer email="kevin.daun@stud.tu-darmstadt.de">Kevin Daun</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>hector_worldmodel_msgs</depend>
  <depend>hector_perception_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
