<package>
  <name>hector_heat_detection</name>
  <version>1.0.0</version>
  <description>hector_heat_detection searches for image regions within a specific temperature range.
     The heat_detection node publishes hector_worldmodel_msgs/ImagePercept messages and serves as
     an source of input for the</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_heat_detection</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Konstantin Fuchs</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>hector_worldmodel_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <!--<build_depend>thermaleye_msgs</build_depend>-->
  <build_depend>dynamic_reconfigure</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>hector_worldmodel_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <!--<run_depend>thermaleye_msgs</run_depend>-->
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>camera_info_manager</test_depend> -->
  <!-- <test_depend>hector_worldmodel_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>thermaleye_msgs</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->

</package>