<?xml version="1.0"?>
<package format="2">
  <name>hector_motion_detection</name>
  <version>1.0.0</version>
  <description>hector_motion_detection</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_motion_detection</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Alexander Stumpf</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>hector_worldmodel_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>hector_perception_msgs</depend>
  <depend>nodelet</depend>


  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
