<package format="2">
  <name>hector_qrcode_detection</name>
  <version>1.0.0</version>
  <description>hector_qrcode_detection searches for QR codes in images using the</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/hector_qrcode_detection</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Johannes Meyer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>zbar</depend>
  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>hector_worldmodel_msgs</depend>
  <depend>hector_perception_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>nodelet</depend>

<export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
</export>

</package>
