<package>
  <name>hector_qrcode_detection</name>
  <version>1.0.0</version>
  <description>hector_qrcode_detection searches for QR codes in images using the</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/hector_qrcode_detection</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Johannes Meyer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>hector_worldmodel_msgs</build_depend>
  <build_depend>hector_perception_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>zbar</build_depend>


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>hector_worldmodel_msgs</run_depend>
  <run_depend>hector_perception_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>zbar</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>hector_worldmodel_msgs</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->

<export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
</export>

</package>
